--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "flash-cards",
+  "homepage": "http://aviolin.github.io/flash-cards",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^8.6.1",
+    "gh-pages": "^3.2.0",
     "mongoose": "^5.12.6",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
@@ -28,7 +30,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "nodemon ./server/server.js"
+    "serve": "nodemon ./server/server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
